# cipa

./: .dockerignore  .env.example  .gitattributes  .gitignore  .initializing  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: bootstrap.sh  devcontainer.json  first-test.sh
.github/workflows/: ci.yml
apps/accounts/: adapters.py  admin.py  apps.py  forms.py  middleware.py  models.py  policies.py  selectors.py  services.py  signals.py  urls.py  validators.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_seed_roles.py  0003_security_functions.py  0004_rls.py  0005_alter_user_email.py  0006_security_function_statement_time.py
apps/accounts/tests/: test_authorization.py  test_models_and_services.py  test_views_and_middleware.py
apps/audit/: admin.py  models.py  selectors.py  services.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py  0002_append_only_rls.py
apps/audit/tests/: test_audit_chain.py
apps/core/: context.py  db_router.py  logging.py  middleware.py  urls.py  validators.py  views.py
apps/core/tests/: test_health_and_validation.py  test_seed.py
apps/establishments/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/establishments/migrations/: 0001_initial.py  0002_rls.py  0003_alter_establishment_postal_code.py
apps/organizations/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/tenants/: context.py  context_processors.py  middleware.py  models.py  services.py  urls.py  views.py
assets/css/: app.css
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py  test.py
docs/: architecture.md  audit-model.md  cloud-first-tests.md  data-retention.md  deployment.md  domain-model.md  election-flow.md  erd.md  incident-response.md  privacy-data-map.md  roadmap.md  threat-model.md
docs/decisions/: 0001-modular-monolith.md  0002-tenant-rls.md  0003-administrative-auth.md  0004-audit-chain.md  0005-ballot-isolation.md
scripts/: copy-assets.mjs  entrypoint.sh  manage-owner.sh  owner-command.sh  postgres-init.sh  wait_for_services.py
templates/: 403.html  404.html  429.html  500.html  base.html
templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html
templates/accounts/: invitation_accept.html  user_list.html
templates/audit/: event_list.html
templates/core/: dashboard.html  home.html
templates/establishments/: establishment_form.html  establishment_list.html
templates/organizations/: company_form.html  company_list.html
templates/tenants/: select.html
tests/e2e/: test_critical_flow.py
(+8 files in other folders)
